--- a/package.json
+++ b/package.json
@@ -7,8 +7,13 @@
 		"test": "jest"
 	},
 	"dependencies": {
+		"lodash": "^4.17.4",
 		"react": "16.0.0-alpha.12",
-		"react-native": "0.46.4"
+		"react-native": "0.46.4",
+		"react-redux": "^5.0.5",
+		"redux": "^3.7.2",
+		"redux-logger": "^3.0.6",
+		"redux-thunk": "^2.2.0"
 	},
 	"devDependencies": {
 		"babel-jest": "20.0.3",
